[package]
name = "bbcode"
version = "1.0.3"
authors = ["Chris MacNaughton <chris@centaurisolutions.nl>"]
description = """
bbcode is a trait and impl for &str that compiles BBCode into HTML
"""
license = "MIT/Apache-2.0"
repository = "https://github.com/ChrisMacNaughton/bbcode-rs"

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.9"